--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "remotty-client",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "build": "node_modules/.bin/electron ."
   },
