--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "remotty-client",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.1.0",
+  "description": "remotty client for Electron",
   "main": "main.js",
   "scripts": {
     "build": "node_modules/.bin/electron ."
   },
-  "author": "",
-  "license": "ISC"
+  "author": "yonda",
+  "license": "MIT"
 }
