--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "remotty-client",
   "version": "0.1.0",
   "description": "remotty client for Electron",
-  "main": "main.js",
+  "main": "src/main.js",
   "scripts": {
     "build": "node_modules/.bin/electron ."
   },
